[package]
name = "initialiser"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
nix.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
log.workspace = true
camino.workspace = true

[dependencies.util]
path = "../util"

[dependencies.github]
path = "../github"

[dependencies.config]
path = "../config"
