[package]
name = "util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
log.workspace = true
cfg-if.workspace = true
camino.workspace = true
lazy_static.workspace = true
mockall.workspace = true

[dependencies.config]
path = "../config"
